<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rowView"
    android:layout_marginTop="10dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/imageSelected"
        android:contentDescription="@string/firstpizza"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pizzaSelected"
        android:layout_toEndOf="@+id/imageSelected"
        android:textColor="@color/black"
        android:textSize="22sp"
        tools:text="pizzaName"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toppingsSelected"
        android:layout_toEndOf="@+id/imageSelected"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        tools:text="Toppings: "/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sauceSelected"
        android:layout_toEndOf="@+id/imageSelected"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="90dp"
        tools:text="Sauce: "/>

    <Spinner android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/specialtySize"
        android:layout_marginTop="125dp"
        android:minHeight="50dp"
        android:layout_toEndOf="@+id/imageSelected"/>

    <CheckBox
        android:text="@string/extra_sauce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imageSelected"
        android:layout_marginTop="165dp"
        android:onClick="extraSauce"
        android:id="@+id/sauceCheckBox"/>

    <CheckBox
        android:text="@string/extra_cheese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imageSelected"
        android:layout_marginTop="200dp"
        android:onClick="extraCheese"
        android:id="@+id/cheeseCheckBox"
        tools:ignore="VisualLintButtonSize" />

    <TextView android:layout_marginTop="200dp"
        android:textSize="22sp"
        android:layout_marginStart="10dp"
        android:text="@string/price"
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button android:text="@string/Add_to_Order"
        android:id="@+id/specialtyAddButton"
        android:onClick="specialtyButton"
        android:layout_marginTop="250dp"
        android:layout_width="200dp" android:layout_height="wrap_content"/>


</RelativeLayout>