<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentOrderActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pizzaOrderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pizza Order"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/orderNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order Number"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/orderNumberTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="0" />

    <ListView
        android:id="@+id/currentOrdersListView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/priceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/subtotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Subtotal $" />

        <EditText
            android:id="@+id/subtotalTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/salesTaxLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sales_tax" />

        <EditText
            android:id="@+id/salesTaxTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/orderTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_total" />

        <EditText
            android:id="@+id/orderTotalTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_total"
            android:minHeight="48dp" />

    </LinearLayout>

    <Button
        android:id="@+id/removePizzaButton"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:onClick="handleRemovePizza"
        android:text="@string/remove" />

    <Button
        android:id="@+id/placeOrderButton"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:onClick="handlePlaceOrder"
        android:text="@string/place_order" />
</LinearLayout>
